knowledgeBase/knowledgeBase.css
/* Generic CSS */
.kb-content, .kb-content * {
    font-family: 'Avenir Next';
    font-size: 1rem;
    --primary-colour: #000000;
    --secondary-colour: #f5f5f5;
    --tertiary-colour: #818181;
    --bg-colour: #ffffff;

    --box-border-radius: 20px;
    --line-border-radius: 10px;

    --section-gap: 20px;

    --pastel-colour-1: rgb(159, 100, 143);
    --pastel-colour-2: rgb(100, 100, 159);
    --pastel-colour-3: rgb(159, 100, 100);
    --pastel-colour-4: rgb(134, 159, 100);
}

.kb-content button {
    border: none;
    border-radius: var(--line-border-radius);
    cursor: pointer;
    min-height: fit-content;
    min-width: fit-content;
    width: fit-content;
    transition: 0.5s color ease, 0.5s background-color ease;
    padding: 10px;
    background-color: var(--primary-colour);
    color: var(--bg-colour);
}

.kb-content input {
    border: none;
    outline: none;
    border-radius: var(--line-border-radius);
    cursor: pointer;
    height: fit-content;
    width: fit-content;
    padding: 10px;
    background-color: var(--bg-colour);
    color: var(--primary-colour);
}



.text-center {
    text-align: center;
}

.kb-content h1, .kb-content h2 {
    font-family: "DIN Alternate Bold";
}

.kb-content h1 {
    font-size: 2rem;
}

.kb-content h2 {
    font-size: 1.5rem;
}

.kb-text-sm {
    font-size: 0.85rem;
}


.task-submit-buttons .add-topic-btn, .task-submit-buttons .add-post-btn {
    margin: 0.2rem 8rem 2rem 8rem;
    padding: 0.8rem 0.8rem;
    border-radius: 10.5px;
    color: white;
    background-color: black;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.task-submit-buttons .add-topic-btn i, .task-submit-buttons .add-post-btn i {
    margin-left: 0.4rem;
}

#post-modal-form .post-title-form, .post-content-form {
    width: 100%;
}

#post-modal-form.modal-body {
    display: flex;
    width: 100%;
    flex-direction: column;
    justify-content: space-between;
    gap: 0.6rem;
}

#post-dropdowns-form {
    gap: 0.8rem;
}

/* Section specific CSS */

.kb-header-section {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--section-gap);
    justify-content: space-between;
    width: 100%;
}

.post-type-btns {
    background-color: var(--secondary-colour);
    padding: 0px;
    white-space: nowrap;
    border-radius: var(--line-border-radius);
    display: flex;
    align-items: center;
    justify-content: center;
}

.post-type-btns button {
    border-radius: 0px;
}

.post-type-btns button:first-child {
    border-top-left-radius: var(--line-border-radius);
    border-bottom-left-radius: var(--line-border-radius);
}

.post-type-btns button:last-child {
    border-top-right-radius: var(--line-border-radius);
    border-bottom-right-radius: var(--line-border-radius);
}

.post-type-btns button {
    background-color: transparent;
    color: var(--primary-colour);
}

.post-type-btns button:hover {
    background-color: #9A9A9A;
}

.post-type-btns button.active {
    background-color: var(--primary-colour);
    color: var(--bg-colour);
}

.kb-listing-header {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--section-gap);
}

.kb-listing-search {
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: var(--secondary-colour);
    border-radius: var(--line-border-radius);
    flex-grow: 1;
    padding-left: 10px;
    border: 0px;
}

.kb-listing-search input {
    background-color: transparent;
    height: 100%;
    width: 100%;
}

#topic-searchbar{
    margin-top: 3%;
    background-color: var(--bg-colour) ;
}

.kb-listing {
    display: flex;
    flex-direction: column;
    gap: var(--section-gap);
    width: 100%;
    height: 100%;
}

.kb-posts {
    display: flex;
    flex-direction: column;
    gap: var(--section-gap);
    flex-grow: 1;
    width: 100%;
    overflow: auto;
}

.kb-post {
    display: flex;
    flex-direction: column;
    padding: 20px;
    background-color: var(--secondary-colour);
    border-radius: var(--box-border-radius);
}

.kb-post-content {
    padding: 10px;
}

.kb-post-content-shortened {
    max-height: 70px;
    overflow: hidden;
    position: relative;
    mask-image: linear-gradient(var(--primary-colour) 0px 35px, transparent 66px);
}

.kb-post-divider {
    background-color: var(--tertiary-colour);
    height: 1px;
    min-height: 1px;
    width: 100%;
}

.kb-post-avatar {
    /* background-color: var(--bg-colour); */
    border-radius: 50%;
    border: 1px solid var(--primary-colour);
    width: 30px;
    height: 30px;
    aspect-ratio: 1/1;
    margin: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.kb-post-info {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: start;
}

.kb-content {
    gap: calc(var(--section-gap) + 10px);
    display: flex;
    flex-direction: column;
    height: 100%;
    padding: var(--section-gap);
}


.kb-main {
    border-radius: 10px;
    width: 100%;
    min-height: 0;
    display: flex;
    gap: var(--section-gap);
    justify-content: space-around;
    flex-direction: row;
}

@media (max-width: 768px) {
    .kb-main {
        align-items: center;
        flex-direction: column-reverse;
    }
    .kb-header-section {
        flex-direction: column;
    }
}

.kb-sidebar {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 300px;
    height: 100%;
    max-height: 100%;
    padding: 15px;
    background-color: var(--secondary-colour);
    border-radius: var(--box-border-radius);
    overflow: hidden;
}

.kb-topic {
    display: inline-flex;
    border-radius: var(--line-border-radius);
    background-color: var(--bg-colour);
    padding: 10px;
    text-align: center;
    min-width: fit-content;
    transition: 0.5s color ease, 0.5s background-color ease;
    cursor: pointer;
    user-select: none;
}

.kb-topic-circle {
    border-radius: 50%;
    width: 20px;
    height: 20px;
    aspect-ratio: 1/1;
    margin-right: 10px;
}


.kb-topic.kb-active {
    background-color: var(--primary-colour);
    color: var(--bg-colour);
}

#topicsList {
    display: flex;
    width: fit-content;
    text-wrap: nowrap;
    flex-direction: column;
    flex-grow: 1;
    max-height: 90vh;
    overflow-y: auto;
    gap: 10px;
    margin: 10px;
    width: 100%;
}

.kb-title-line {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    flex-wrap: wrap;
}

.kb-title-header {
    flex-grow: 1;
}

.kb-post-badges {
    display: flex;
    flex-direction: row;
    gap: 10px;
    flex-wrap: wrap;
}

.kb-badge {
    background-color: var(--primary-colour);
    color: var(--bg-colour);
    padding: 5px 9px;
    font-size: 0.85rem;
    border-radius: var(--line-border-radius);
}

.kb-share-link {
    color: var(--tertiary-colour);
    font-size: 1.2rem;
    cursor: pointer;
}

.kb-post-buttons {
    display: flex;
    justify-content: start;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 5px;
}

.kb-post-buttons button {
    padding: 8px 12px;
    font-size: 0.95rem;
    margin-top: 10px;
}

.kb-content button.kb-delete-post-button {
    background-color: rgb(230, 117, 126);
}

.kb-full-height {
    height: 100%;
    flex-grow: 1;
}

.kb-scrollable {
    overflow-y: scroll;
}

